WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151345
[JSC] IteratedRegisterCoalescingAllocator's freeze can add zombie Tmps to our coloring algorithm
https://bugs.webkit.org/show_bug.cgi?id=151345
Summary
[JSC] IteratedRegisterCoalescingAllocator's freeze can add zombie Tmps to our...
Benjamin Poulain
Reported
2015-11-17 02:48:36 PST
[JSC] IteratedRegisterCoalescingAllocator's freeze can add zombie Tmps to our coloring algorithm
Attachments
Patch
(4.04 KB, patch)
2015-11-17 03:06 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2015-11-17 03:06:04 PST
Created
attachment 265670
[details]
Patch
WebKit Commit Bot
Comment 2
2015-11-17 11:11:26 PST
Comment on
attachment 265670
[details]
Patch Clearing flags on attachment: 265670 Committed
r192516
: <
http://trac.webkit.org/changeset/192516
>
WebKit Commit Bot
Comment 3
2015-11-17 11:11:30 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug